# SkyPrint

./: .env.local.example  .gitignore  CLAUDE.md  DISCREPANCIES.md  README.md  SOURCES.md  TODO_VERIFY.md  eslint.config.mjs  package-lock.json  package.json  vercel.json
public/data/: BAW117_2026-04-10.json  BAW117_2026-04-10_issr.geojson
services/contrail_engine/: .env.example  Dockerfile  constants.py  docker-compose.yml  pyproject.toml  requirements.txt
services/contrail_engine/app/: config.py  main.py
services/contrail_engine/app/models/: common.py  requests.py  responses.py
services/contrail_engine/app/routers/: compare.py  health.py  optimize.py  predict.py  route_history.py
services/contrail_engine/app/services/: co2_service.py  cocip_service.py  optimizer.py  sac_fallback.py  weather_service.py
services/contrail_engine/app/utils/: conversions.py  geo.py
services/contrail_engine/data/pipeline_output/: manifest.json
services/contrail_engine/pipeline/: __init__.py  adsbexchange_client.py  cocip_runner.py  counterfactual.py  era5_fetcher.py  manifest_builder.py  opensky_client.py  ranking.py  route_geometry.py  run_pipeline.py
services/contrail_engine/tests/: conftest.py
services/contrail_engine/tests/fixtures/: sample_flight.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/airlines/: page.tsx
src/app/compare/: page.tsx
src/app/daily/: page.tsx
src/app/dashboard/: page.tsx
src/app/mission/: page.tsx
src/hooks/: use-aero-mic.ts  use-aero-voice.ts  use-aero.ts  use-comparison.ts  use-photon.ts  use-simulation.ts
(+146 files in other folders)
