[project]
name = "skyprint-contrail-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pycontrails[gfs]>=0.54.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "xarray>=2023.0",
    "httpx>=0.27.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.4",
]
ecmwf = [
    "pycontrails[ecmwf]",
]

[tool.ruff]
line-length = 100
target-version = "py311"
